--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,21 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" charset="PARK GI-PYO">
-    <title>project-lottery</title>
+    <title>intro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet">
 </head>
 <body>
-<header id="header">
-    header 삽입부
-    <hr>
-</header>
-
+<!-- BEGIN 상단 logo -->
+<div class="logo">
+    <img src="/img/logo.png">
+</div>
+<!-- END 상단 logo -->
 <main class="container">
-    <div class="row">
-        <h1>This is index page.</h1>
+    <!-- BEGIN 로또 회차 타이머 -->
+    <div class="lotto-timer">
+        <div class="timer">
+            <svg class="timer-progress" xmlns="http://www.w3.org/2000/svg">
+                <circle class="progress-fill" cx="250" cy="250" r="230"></circle>
+                <circle class="progress-bar-fill" cx="250" cy="250" r="230"></circle>
+                <circle class="progress-bar" cx="250" cy="250" r="230"></circle>
+            </svg>
+            <div class="timer-info">
+                <div class="timer-draw-no"></div>
+                <div class="timer-text"></div>
+                <div class="timer-remain"></div>
+            </div>
+        </div>
     </div>
+    <!-- END 로또 회차 타이머 -->
+    <!-- BEGIN 메뉴 링크 -->
+    <div class="link-group">
+        <div class="card" id="link-shop-list">
+            <div class="card-body">
+                <span class="card-title label-title">
+                    <i class="fas fa-store">&nbsp;</i>복권판매점 조회
+                </span>
+                <p class="card-text label-text">주변 복권판매점이 궁금하신가요?</p>
+                <a href="/shop/list" class="btn btn-primary label-text">바로가기</a>
+            </div>
+        </div>
+        <div class="card" id="link-shop-ranking">
+            <div class="card-body">
+                <span class="card-title label-title">
+                    <i class="fas fa-trophy">&nbsp;</i>로또명당 조회
+                </span>
+                <p class="card-text label-text">로또명당 순위가 궁금하신가요?</p>
+                <a href="/shop/ranking" class="btn btn-primary label-text">바로가기</a>
+            </div>
+        </div>
+        <div class="card" id="link-lotto">
+            <div class="card-body">
+                <span class="card-title label-title">
+                    <i class="fas fa-clover">&nbsp;</i>로또추첨결과 조회
+                </span>
+                <p class="card-text label-text">회차별 로또추첨결과가 궁금하신가요?</p>
+                <a href="/L645" class="btn btn-primary label-text">바로가기</a>
+            </div>
+        </div>
+        <div class="card" id="link-purchase-lotto">
+            <div class="card-body">
+                <span class="card-title label-title">
+                    <i class="fas fa-cart-shopping">&nbsp;</i>로또 구매
+                </span>
+                <p class="card-text label-text">이번 주 로또 구매를 원하시나요?</p>
+                <a href="/purchase/dh/login" class="btn btn-primary label-text">바로가기</a>
+            </div>
+        </div>
+    </div>
+    <!-- END 메뉴 링크 -->
 </main>
-
+<script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/index.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
