--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -13,21 +13,23 @@
     <!-- BEGIN 데스크탑 메뉴 -->
     <nav class="desktop-menu">
         <a href="/">
-            <img src="/images/logo.png">
+            <img src="/img/ico-logo.png">
         </a>
         <ul>
             <li><a href="/">홈</a></li>
             <li><a href="/shop/list">복권판매점</a></li>
-            <li><a href="/L645">로또추첨결과</a></li>
             <li><a href="/shop/ranking">로또명당</a></li>
+            <li><a href="/L645">로또추첨결과</a></li>
+            <li><a href="/purchase/dh/login">로또구매</a></li>
         </ul>
+        <hr>
     </nav>
     <!-- END 데스크탑 메뉴 -->
     <!-- BEGIN 모바일 하단 메뉴 -->
     <nav class="mobile-menu">
         <ul>
             <li>
-                <a href="/L645">
+                <a href="/">
                     <div>
                         <i class="fas fa-home"></i>
                         <span>홈</span>
@@ -45,7 +47,7 @@
             <li>
                 <a href="/L645">
                     <div>
-                        <i class="fas fa-trophy"></i>
+                        <i class="fas fa-clover"></i>
                         <span>로또추첨결과</span>
                     </div>
                 </a>
@@ -53,7 +55,7 @@
             <li>
                 <a href="/shop/ranking">
                     <div>
-                        <i class="fas fa-ranking-star"></i>
+                        <i class="fas fa-trophy"></i>
                         <span>로또명당</span>
                     </div>
                 </a>
