--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,10 +1,17 @@
-#footer-content {
-    display: block;
-    justify-content: center;
+footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.copyright {
+    display: flex;
     align-items: center;
-    background: #eeeeee;
-    padding: 10px 20px;
-    text-align: center;
+    align-content: center;
+    justify-content: center;
+    padding: 10px 0;
+    background: #434348;
 }
 
 .scroll-button {
@@ -29,6 +36,10 @@
 }
 
 @media screen and (max-width: 768px) {
+    footer {
+        padding-bottom: 50px;
+    }
+
     .scroll-button {
         right: 0;
     }
