--- a/src/main/resources/static/css/shop/shopList.css
+++ b/src/main/resources/static/css/shop/shopList.css
@@ -1,30 +1,13 @@
-body {
-    background: #eeeeee;
+.accordion {
+    width: 100%;
 }
-
-
-.content-group {
-    background: white;
-    min-height: 90vh;
-    padding: 10px;
-    margin-top: 10px;
-}
-
 
 .display-none {
     display: none;
 }
 
-.region-info {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: flex-start;
-}
-
 .region {
     border: none;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
     padding: 10px;
     margin-top: 5px;
     display: grid;
@@ -54,6 +37,7 @@ body {
 
 
 .card {
+    width: 100%;
     border: none;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
     margin-top: 5px;
@@ -61,7 +45,7 @@ body {
 }
 
 .card:hover {
-    transform: scale(105%);
+    transform: scale(103%);
     cursor: pointer;
 }
 
@@ -78,36 +62,6 @@ body {
 .active {
     z-index: 0;
 }
-
-
-.ico {
-    width: 25px;
-    margin: -4px 3px 0 5px;
-}
-
-.ico-small {
-    width: 13px;
-    padding: 0;
-    margin: 0 0 2px 3px;
-}
-
-
-.label-title {
-    font-size: 18px;
-    font-weight: bold;
-    white-space: nowrap;
-}
-
-.label-bold-text {
-    font-size: 16px;
-    font-weight: bold;
-    white-space: nowrap;
-}
-
-.label-text {
-    font-size: 16px;
-}
-
 
 .label-region-bold {
     color: black;
@@ -127,37 +81,12 @@ body {
 
 
 @media screen and (max-width: 768px) {
-    .container {
-        padding-bottom: 40px;
-    }
-
     .region {
         grid-template-columns: repeat(3, 1fr);
     }
 
     .card {
         font-size: 16px;
-    }
-
-    .ico {
-        width: 23px;
-    }
-
-    .ico-small {
-        width: 12px;
-        margin-bottom: 3px;
-    }
-
-    .label-title {
-        font-size: 17px;
-    }
-
-    .label-bold-text {
-        font-size: 15px;
-    }
-
-    .label-text {
-        font-size: 15px;
     }
 
     .label-region-bold {
@@ -176,27 +105,6 @@ body {
 @media screen and (max-width: 480px) {
     .card {
         font-size: 15px;
-    }
-
-    .ico {
-        width: 21px;
-    }
-
-    .ico-small {
-        width: 11px;
-        margin-bottom: 1px;
-    }
-
-    .label-title {
-        font-size: 16px;
-    }
-
-    .label-bold-text {
-        font-size: 14px;
-    }
-
-    .label-text {
-        font-size: 14px;
     }
 
     .label-region-bold {
@@ -228,22 +136,6 @@ body {
         font-size: 14px;
     }
 
-    .ico {
-        width: 20px;
-    }
-
-    .label-title {
-        font-size: 15px;
-    }
-
-    .label-bold-text {
-        font-size: 13px;
-    }
-
-    .label-text {
-        font-size: 13px;
-    }
-
     .label-region-bold {
         font-size: 12px;
     }
@@ -267,22 +159,6 @@ body {
         font-size: 13px;
     }
 
-    .ico {
-        width: 19px;
-    }
-
-    .label-title {
-        font-size: 14px;
-    }
-
-    .label-bold-text {
-        font-size: 12px;
-    }
-
-    .label-text {
-        font-size: 12px;
-    }
-
     .label-region-bold {
         font-size: 11px;
     }
@@ -299,26 +175,6 @@ body {
 @media screen and (max-width: 320px) {
     .card {
         font-size: 12px;
-    }
-
-    .ico {
-        width: 18px;
-    }
-
-    .ico-small {
-        width: 10px;
-    }
-
-    .label-title {
-        font-size: 13px;
-    }
-
-    .label-bold-text {
-        font-size: 11px;
-    }
-
-    .label-text {
-        font-size: 11px;
     }
 
     .label-region-bold {
