--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,13 +6,14 @@
     <meta name="description" content="">
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
+    <link href="/css/common.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
 </head>
 <body>
 <footer>
     <!-- BEGIN 컨텐츠 영역 -->
-    <div id="footer-content">
-        <span>&copy; 2023 PARK GI-PYO</span>
+    <div class="copyright">
+        <span class="label-mini-title">&copy; 2023 PARK GI-PYO</span>
     </div>
     <!-- END 컨텐츠 -->
     <!-- BEGIN 스크롤 버튼 영역 -->
@@ -24,7 +25,7 @@
             </a>
         </button>
         <button>
-            <a href="#footer-content">
+            <a href=".copyright">
                 <span>DOWN</span>
                 <i class="fas fa-arrow-alt-circle-down"></i>
             </a>
