--- a/src/main/resources/templates/shop/shopList.html
+++ b/src/main/resources/templates/shop/shopList.html
@@ -7,6 +7,7 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
     <link href="/css/shop/shopList.css" rel="stylesheet">
@@ -18,78 +19,113 @@
 </header>
 <main class="container">
     <div class="content-group">
-        <!-- BEGIN 지역 선택 영역 -->
-        <div class="region-info">
-            <span class="label-title">서울특별시</span>
-            <span class="label-title">&nbsp;<i class="fas fa-angle-right"></i>&nbsp;</span>
-            <span class="label-title">강남구</span>
-            <span class="label-title">&nbsp;<i class="fas fa-angle-right"></i>&nbsp;</span>
-            <span class="label-title">청담동</span>
+
+
+
+        <div class="accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="search-section-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#search-section-body" aria-expanded="true" aria-controls="search-section-body">
+                        <div class="region-info">
+                            <img class="ico" src="/img/ico-search.png">
+                            <span class="label-title">서울특별시</span>
+                            <span class="label-title">&nbsp;<i class="fas fa-angle-right"></i>&nbsp;</span>
+                            <span class="label-title">강남구</span>
+                            <span class="label-title">&nbsp;<i class="fas fa-angle-right"></i>&nbsp;</span>
+                            <span class="label-title">청담동</span>
+                        </div>
+                    </button>
+                </h2>
+                <div id="search-section-body" class="accordion-collapse collapse show" aria-labelledby="search-section-header">
+                    <div class="accordion-body">
+                        <div class="region">
+                            <div>
+                                <span class="label-region-bold">이전</span>
+                            </div>
+                            <div>
+                                <span class="label-region-bold">동 전체</span>
+                            </div>
+                            <div>
+                                <span class="label-region-normal">서울특별시</span><span class="label-region-count">&nbsp;(0)</span>
+                            </div>
+                        </div>
+                        <!-- END 지역 선택 영역 -->
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="region">
-            <div>
-                <span class="label-region-bold">이전</span>
-            </div>
-            <div>
-                <span class="label-region-bold">동 전체</span>
-            </div>
-            <div>
-                <span class="label-region-normal">서울특별시</span><span class="label-region-count">&nbsp;(0)</span>
+        
+        
+
+        <div class="accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="shop-list-section-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#shop-list-section-body" aria-expanded="true" aria-controls="shop-list-section-body">
+                        <img class="ico" src="/img/ico-shop.png">
+                        <span class="label-title">복권 판매점</span>
+                    </button>
+                </h2>
+                <div id="shop-list-section-body" class="accordion-collapse collapse show" aria-labelledby="shop-list-section-header">
+                    <div class="accordion-body">
+
+
+                        <!-- BEGIN 로또 판매점 목록 -->
+                        <div class="card" id="lottery-shops">
+                            <div class="card-header">
+                                <span class="label-bold-text">인터넷판매(동행복권)</span>
+                                <img src="/img/ico-1st-prize.png" class="ico"/><span class="label-text">0</span>
+                                <img src="/img/ico-2nd-prize.png" class="ico"/><span class="label-text">0</span>
+                            </div>
+                            <div class="card-body">
+                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
+                                <img src="/img/ico-link.png" class="ico-small"/>
+                            </div>
+                        </div>
+                        <!-- END 로또 판매점 목록 -->
+
+                        <br>
+
+                        <!-- BEGIN PAGINATION -->
+                        <nav id="pagination">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-double-left"></i>
+                                    </a>
+                                </li>
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-left"></i>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="#">1</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-right"></i>
+                                    </a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-double-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <!-- END PAGINATION -->
+
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- END 지역 선택 영역 -->
-
-        <br>
-
-        <!-- BEGIN 로또 판매점 목록 -->
-        <span class="label-title">복권 판매점</span>
-        <div class="card" id="lottery-shops">
-            <div class="card-header">
-                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                <img src="/images/ico_1st_prize.png" class="ico"/><span class="label-text">0</span>
-                <img src="/images/ico_2nd_prize.png" class="ico"/><span class="label-text">0</span>
-            </div>
-            <div class="card-body">
-                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                <img src="/images/ico_link.png" class="ico-small"/>
-            </div>
-        </div>
-        <!-- END 로또 판매점 목록 -->
-
-        <br>
-
-        <!-- BEGIN PAGINATION -->
-        <nav id="pagination">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">
-                        <i class="fas fa-angle-double-left"></i>
-                    </a>
-                </li>
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">
-                        <i class="fas fa-angle-left"></i>
-                    </a>
-                </li>
-                <li class="page-item active">
-                    <a class="page-link" href="#">1</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">
-                        <i class="fas fa-angle-right"></i>
-                    </a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">
-                        <i class="fas fa-angle-double-right"></i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <!-- END PAGINATION -->
     </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
